ingress-api.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organicnow-ingress-api
  namespace: organicnow
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 8080
