ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organicnow-ingress-web
  namespace: organicnow
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
